@@ -1,3 +1,12 @@
+2003-03-06  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3190580, tables should reset line-height and white-space
+	in quirks mode.
+	
+        Reviewed by trey and john
+
+        * khtml/css/quirks.css:
+
 === Safari-65 ===
 
 2003-03-06  Darin Adler  <darin@apple.com>
